--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,4 +1,16 @@
 .friendList {
     display: flex;
     list-style-type: none;
+    margin-top: 14px;
+    width: 400px;
+}
+.item {
+    margin-right: 10px;
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+width: 20%;
+}
+.item:last-child {
+    margin-right: 0;
 }
